objects/Pricing_Request__c.object
<CustomObject>
    <fields>
        <fullName>Total_Deal_Value__c</fullName>
        <label>Total Deal Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_NPC_Items_Received__c</fullName>
        <description>This holds the number of request items for which NPC is received</description>
        <label>Total NPC Items Received</label>
        <summaryFilterItems>
            <field>Pricing_Request_Item__c.isNPCApplicable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Pricing_Request_Item__c.Net_Price_Status__c</field>
            <operation>equals</operation>
            <value>Net Price Received, Error</value>
        </summaryFilterItems>
        <summaryForeignKey>Pricing_Request_Item__c.Pricing_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_NPC_Items_Requested__c</fullName>
        <description>This holds the number of request items for which NPC is initiated</description>
        <label>Total NPC Items Requested</label>
        <summaryFilterItems>
            <field>Pricing_Request_Item__c.Net_Price_Status__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Pricing_Request_Item__c.isNPCApplicable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Pricing_Request_Item__c.Pricing_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>WorkSet_Item_Id__c</fullName>
        <label>Work Set Item Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_PostalCode__c</fullName>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>approverText__c</fullName>
        <description>Field to track the Backup Approver level and name when request is sent to backup approver. Format:(ApprovalLevel1,BackupApprover1, ApproverLevel2,BackupApprover2..)
Ex:(1,backupA,4backupB)</description>
        <label>approverText</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>f_NPC_Callout_Status__c</fullName>
        <formula>IF(Total_NPC_Items_Requested__c == 0,&apos;&apos;,IF(Total_NPC_Items_Requested__c == Total_NPC_Items_Received__c,&apos;Complete&apos;,&apos;In Progress&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPC Callout Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>final_approval_cycle_time__c</fullName>
        <formula>IF(NOT(ISBLANK(Approver5_Date__c)), IF(NOT(ISBLANK(Approver4_Date__c)), Approver5_Date__c - Approver4_Date__c,IF(NOT(ISBLANK(Approver3_Date__c)),Approver5_Date__c - Approver3_Date__c,IF(NOT(ISBLANK(Approver2_Date__c)),Approver5_Date__c - Approver2_Date__c,IF(NOT(ISBLANK(Approver1_Date__c)),Approver5_Date__c - Approver1_Date__c,Approver5_Date__c - Submitted_On__c)))),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Approval Cycle Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isFloorApplicable__c</fullName>
        <label>isFloorApplicable</label>
        <summaryFilterItems>
            <field>Pricing_Request_Item__c.isFloorApplicable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Pricing_Request_Item__c.Pricing_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>isNPCApplicable__c</fullName>
        <label>isNPCApplicable</label>
        <summaryFilterItems>
            <field>Pricing_Request_Item__c.isNPCApplicable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Pricing_Request_Item__c.Pricing_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>isPaymentTermsApplicable__c</fullName>
        <label>isPaymentTermsApplicable</label>
        <summaryFilterItems>
            <field>Pricing_Request_Item__c.isPaymentTermsApplicable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Pricing_Request_Item__c.Pricing_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>isVolumeApplicable__c</fullName>
        <label>isVolumeApplicable</label>
        <summaryFilterItems>
            <field>Pricing_Request_Item__c.isVolumeApplicable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Pricing_Request_Item__c.Pricing_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Pricing Request</label>
    <listViews>
        <fullName>AP_B929_Pricing_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>AP B929</label>
        <queue>AP_B929</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AP_B929_Pricing_Request1</fullName>
        <filterScope>Queue</filterScope>
        <label>AP B929</label>
        <queue>AP_B929</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AP_B929_Pricing_Request2</fullName>
        <filterScope>Queue</filterScope>
        <label>AP B929</label>
        <queue>AP_B929</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SoldTo_Code__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Spot_Type__c</columns>
        <columns>Request_Valid_From__c</columns>
        <columns>Request_Valid_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Approval_Status__c</columns>
        <columns>Approver1__c</columns>
        <columns>Approver2__c</columns>
        <columns>Approver4__c</columns>
        <columns>Sales_Org_Code__c</columns>
        <columns>On_Behalf_Of__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Backup_Level_1__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PR:{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Requests - System</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Sharing_with_Public_Group__c</fullName>
        <label>Sharing with Public Group</label>
    </sharingReasons>
</CustomObject>